<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_horizontal"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="@dimen/margin_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_horizontal_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/title"
            android:textColor="@color/teal_700"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/code_play_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_horizontal_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/title"
            android:textColor="@color/red"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_id"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertical_edit_text"
            android:padding="@dimen/padding_text"
            android:hint="@string/user_id_hint"
            android:textColorHint="@color/red"
            android:textSize="@dimen/text"
            app:backgroundTint="@color/teal_700"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertical_edit_text"
            android:padding="@dimen/padding_text"
            android:hint="@string/password_hint"
            android:textColorHint="@color/red"
            android:textSize="@dimen/text_mini"
            app:backgroundTint="@color/teal_700"/>

        <com.google.android.material.button.MaterialButton
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_button"
            android:padding="@dimen/padding_text"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/white"
            android:textSize="@dimen/text"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/corner_radius"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgot_password"
            android:text="@string/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_button"
            android:gravity="end"
            android:background="@color/white"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/text_forgot_button"
            android:textAllCaps="false"/>

    </LinearLayout>

  </LinearLayout>